@@ -1,3 +1,8 @@
+2005-08-21  Kang Jeong-Hee <Keizi@mail.co.kr>
+
+	* gnome-panel-screenshot.c, screenshot-dialog.c: Fix wrong order
+	of filename charset conversion.
+
 Sun Jul 17 15:04:13 2005  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-panel-screenshot.c: (prepare_screenshot), (load_options):
